--- a/src/components/product-card/style.scss
+++ b/src/components/product-card/style.scss
@@ -44,9 +44,9 @@
   box-shadow: 10px 10px 5px 0px rgba(112, 192, 91, 0.2);
 }
 .checked {
-  color: #70c05b;
-  border-color: #70c05b;
-  background-color: #ffff;
+  color: #70c05b !important;
+  border-color: #70c05b !important;
+  background-color: #ffff !important;
 }
 .shadow-check {
   box-shadow: 10px 10px 5px 0px rgba(112, 192, 91, 0.2);
