--- a/src/components/basket-card/style.scss
+++ b/src/components/basket-card/style.scss
@@ -1,14 +1,17 @@
 .basket-card {
+  position: relative;
   padding: 10px;
   background-color: #ffff;
   display: grid;
   grid-template-columns: auto 2fr auto 0.5fr;
   column-gap: 20px;
-  box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
   &__title {
     font-size: 16px;
+  }
+  &__counter {
+    min-width: 120px;
   }
   &__info {
     display: flex;
@@ -28,5 +31,21 @@
     align-self: center;
     justify-self: center;
     font-size: 20px;
+  }
+  &__delete {
+    display: flex;
+    position: absolute;
+    border-radius: 10px;
+    cursor: pointer;
+    border: 2px solid #ffff;
+    background-color: #ffff;
+    transition: 0.2s ease;
+    right: 0;
+  }
+  &__delete:hover {
+    background-color: #f63;
+  }
+  &__delete:active {
+    transform: scale(0.9);
   }
 }
