--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -4,7 +4,9 @@
   padding: 0 30px 0 30px;
 }
 .header {
-  position: relative;
+  position: sticky;
+  top: 0;
+  z-index: 10;
   background-color: #ffffff;
   box-shadow: 2px 4px 8px 0px rgba(0, 0, 0, 0.1);
   padding: 5px 10px;
