--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@ html,
 body {
   overflow-x: hidden;
   color: var(--black);
-  background: #fbf8ec;
+  background: #5ac893fc;
   height: 100vh;
 }
 
