--- a/src/app/bank/style.scss
+++ b/src/app/bank/style.scss
@@ -1,12 +1,34 @@
 .bank-content {
-  background-color: #fff;
-  padding: 20px;
   max-width: 80%;
-  margin: 0 auto;
+  min-height: 500px;
+
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
+
+  padding: 20px;
+  margin: 0 auto;
   border-radius: 10px;
-  min-height: 500px;
+
+  background-color: #fff;
+  box-shadow: 12px 6px 8px 0px rgb(0 0 0 / 27%);
+}
+
+@media (max-width: 800px) {
+  .bank-content {
+    padding: 20px 5px 20px 5px;
+    max-width: 100%;
+
+    &__title {
+      font-size: 20px;
+    }
+  }
+}
+@media (max-width: 576px) {
+  .bank-content {
+    &__title {
+      font-size: 16px;
+    }
+  }
 }
