--- a/src/components/account-balance/style.scss
+++ b/src/components/account-balance/style.scss
@@ -1,24 +1,20 @@
 .balance {
   display: flex;
-  font-size: 18px;
-  gap: 10px;
   align-items: center;
+  gap: 10px;
+
+  font-size: 18px;
 
   &__info {
-    padding: 3px 5px;
+    padding: 5px 7px;
     background-color: #f63;
     color: white;
   }
   &__link {
-    margin-left: 20px;
-    font-size: 16px;
-    padding: 2px 5px;
-    border-radius: 5px;
-    border: 2px solid #fff;
-    border-bottom: 2px solid #f63;
-    transition: 0.3 ease;
   }
+
   &__link:hover {
-    border: 2px solid #f63;
+    background-color: #f63;
+    color: #fff;
   }
 }
