--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -1,16 +1,18 @@
-.header__container {
-  max-width: 1240px;
-  margin: 0 auto;
-  padding: 0 30px 0 30px;
-}
 .header {
   position: sticky;
   top: 0;
   z-index: 10;
   background-color: #ffffff;
-  box-shadow: 2px 4px 8px 0px rgba(0, 0, 0, 0.1);
-  padding: 5px 10px;
+  padding: 5px 0px;
 
+  &__container {
+    max-width: 1240px;
+    margin: 0 auto;
+    padding: 0 30px 0 30px;
+  }
+  &__title {
+    font-size: 32px;
+  }
   &__inner {
     display: flex;
     align-items: center;
@@ -35,7 +37,61 @@
     background-color: #f63;
     color: #ffff;
   }
+  &__balance-link {
+    margin-left: 20px;
+    padding: 2px 5px;
+
+    border: 2px solid #f63;
+    border-radius: 5px;
+
+    font-size: 16px;
+    text-align: center;
+    transition: 0.3s ease;
+  }
 }
 .logo-highlight {
   color: #f63;
+}
+
+@media (max-width: 900px) {
+  .basket__balance {
+    display: none;
+  }
+}
+@media (max-width: 800px) {
+  .header__bank-balance {
+    display: none;
+  }
+}
+@media (max-width: 576px) {
+  .header {
+    &__title {
+      font-size: 25px;
+    }
+    &__logo {
+      gap: 5px;
+    }
+    &__img {
+      width: 40px;
+    }
+    &__balance-link {
+      font-size: 12px;
+    }
+  }
+}
+@media (max-width: 400px) {
+  .header {
+    padding: 7px 0;
+
+    &__container {
+      padding: 0 20px 0 15px;
+    }
+    &__title {
+      font-size: 20px;
+    }
+    &__img {
+      width: 30px;
+      height: 30px;
+    }
+  }
 }
