--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -38,7 +38,6 @@
     color: #ffff;
   }
   &__balance-link {
-    margin-left: 20px;
     padding: 2px 5px;
 
     border: 2px solid #f63;
@@ -47,6 +46,11 @@
     font-size: 16px;
     text-align: center;
     transition: 0.3s ease;
+  }
+  &__options {
+    display: "flex";
+    align-items: center;
+    gap: 20px;
   }
 }
 .logo-highlight {
