--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,10 +17,10 @@
 
 html,
 body {
-  overflow-x: hidden;
   color: var(--black);
   background: #5ac893fc;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 a {
@@ -30,4 +30,20 @@ a {
 ul,
 li {
   list-style: none;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+.title {
+  font-size: 44px;
+  color: #414141;
+  margin: 40px 0;
+}
+@media (max-width: 576px) {
+  .title {
+    font-size: 30px;
+    margin: 20px 0;
+  }
 }
