--- a/src/components/products/product-card/style.scss
+++ b/src/components/products/product-card/style.scss
@@ -1,4 +1,5 @@
 .product {
+  position: relative;
   width: 200px;
   display: flex;
   flex-direction: column;
@@ -9,6 +10,7 @@
   transition: all 0.3s ease;
 
   &__img {
+    user-select: none;
     object-fit: contain;
     width: 100%;
   }
@@ -22,8 +24,11 @@
   }
   &__price {
     align-self: flex-end;
+    user-select: none;
   }
   &__title {
+    user-select: none;
+
     font-size: 14px;
     flex-grow: 1;
   }
@@ -37,6 +42,10 @@
     color: #70c05b;
     border-color: #70c05b;
     background-color: #ffff;
+  }
+  &__favorites {
+    top: 5px;
+    right: 5px;
   }
 }
 
@@ -93,6 +102,7 @@
     }
     &__title {
       font-size: 14px;
+      max-width: 90%;
     }
     &__img {
       align-self: center;
