--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -1,17 +1,21 @@
 .home {
   &__header {
-    // display: flex;
-    // align-items: center;
-    // justify-content: space-between;
     display: grid;
     grid-template-columns: 1fr 2fr;
     align-items: center;
   }
   &__sort {
     justify-self: end;
+    align-self: flex-end;
   }
 }
-
+@media (max-width: 700px) {
+  .home {
+    &__sort {
+      align-self: center;
+    }
+  }
+}
 @media (min-width: 1560px) {
   .home__container {
     max-width: 1440px;
